# horizontal

./: .dev.env  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
admin/: models.py
app/: models.py
app/migrations/: 0001_initial.py
authentication/: __init__.py  admin.py  forms.py  models.py
authentication/api/: serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
base/: models.py
base/migrations/: 0001_initial.py
core/: permission.py  settings.py  urls.py  utils.py
database/: .database.env
provider/: traefik.yaml
server/: nginx.conf
stack/: models.py
